# fortyzero

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: curtailment_implementation_plan.md  wind_volume_model_specs.md
financial_model/: __init__.py
financial_model/core/: __init__.py  dcf_engine.py  financial_model.py  kpi_calculator.py
financial_model/interfaces/: __init__.py  price_curve.py  volume_model.py
financial_model/models/: __init__.py  cost_model.py  csv_price_curve.py  curtailment_model.py  financing_model.py  inflation_curve.py  pv_volume_model.py  revenue_model.py  tax_model.py
financial_model/schemas/: __init__.py  financial_model_input.schema.json
financial_model/templates/: __init__.py  asset_templates.py
financial_model/tests/: __init__.py  test_curtailment_model.py  test_financial_model.py  test_hourly_revenue.py  test_inflation_curve.py  test_integration_pv.py  test_pv_case.py  test_pv_volume_model.py  test_revenue_model.py
financial_model/utils/: __init__.py  financial_utils.py  pvgis_client.py
